--- a/css/main.css
+++ b/css/main.css
@@ -95,16 +95,6 @@ nav a {
   text-decoration: none;
 }
 
-.cards {
-  display: grid;
-  grid-template-columns: repeat(3, 2fr);
-  grid-gap: 20px;
-}
-
-main {
-  display: flex;
-}
-
 .sidebar {
   background-color: #333;
   border: 5px solid #000;
@@ -118,7 +108,7 @@ main {
 /* Media Queries */
 
 /* /* For mobile screens smaller than 600px. */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 599px) {
   
   header {
     flex-direction: column;
@@ -129,14 +119,10 @@ main {
     margin-left: 0;
     margin-top: 10px;
   }
-  /* Cards */
-  .cards {
-    grid-template-columns: repeat(2, 2fr);
-  }
 }
 
 /* /* For tablet in potrait screens between 600px and 900px  */
-@media only screen and (min-width: 600px) and (max-width: 900px) {
+@media only screen and (min-width: 900px) {
 
   header {
     flex-direction: column;
@@ -149,19 +135,17 @@ main {
   }
 
   /* Cards */
-  .cards {
+  /*.cards {
     grid-template-columns: repeat(1, 1fr);
+  }*/
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    grid-gap: 20px;
   }
 
   main {
-    display: block;
-    margin: 0 auto;
-    max-width: 80%;
-  }
-
-
-  .sidebar {
-    flex: 0 0 100%;
-    margin: 20px 0;
+    display: flex;
   }
 }
